# the_tracker

./: .gitignore  Cargo.toml  README.MD  data-collection-chart.md  flow-chart.md  flow-diagram.txt  pr.txt  process_diagram.xml  user-admin-facing-processes.md  workflow_diagram.uml
db_updater/: Cargo.toml
db_updater/src/: lib.rs  main.rs
db_updater_local/: Cargo.toml
db_updater_local/src/: main.rs
db_updater_mysql/: Cargo.toml
db_updater_mysql/migrations/: 000-gosim-projects.sql
db_updater_mysql/src/: learn.sql  main.rs  mysql.sql
issues_tracker/: Cargo.toml
issues_tracker/src/: lib.rs
issues_tracker_local/: Cargo.toml
issues_tracker_local/src/: main.rs
migrations/: 20240308202145_gosim.sql
playground/: Cargo.toml  issues.txt  sratch.rs
playground/query_responses/: accepted_pr.json  get_avatar.gql  issue_comments.gql  issue_details.json  issue_tagged.gql  issue_tagged.json  issue_tagged_closed_w_events.gql  issue_tagged_closed_w_events.json  issue_tagged_w_events.gql  issue_w_events.json  pr_tagged.gql  pr_tagged.json  pr_tagged_approved.gql  pr_tagged_approved.json  pr_tagged_approved_only.json  pr_tagged_approved_state_only.gql  pr_tagged_overall_search.json  pr_tagged_per_repo_search.gql  pr_tagged_per_repo_search.json  pr_w_events.gql  pr_w_events.json  queries.gql  reference_cross.gql
playground/query_responses/backup/: get_avatar.json  issue_comments.json  issue_tagged_timelineItems.gql  issue_w_events_expanded.gql
playground/src/: db_updater_local.rs  issues_tracker_local.rs  lib.rs  main.rs  mysql.rs  query_response.json  saved_funcs.rs
query_responses/: issue_search_closed.gql  issue_search_open.gql  issue_tagged_w_events.gql  issue_tagged_w_events.json  pr_tagged_overall_search.json  search_issues_closed.gql  search_issues_open.gql  search_issues_w_update_comments.gql  search_issues_w_update_comments.json  search_pull_requests.gql  search_pull_requests.json  search_pull_requests_overall.gql
query_responses/backup/: pr_tagged_approved.json
src/: db_ops.rs  db_updater.rs  db_updater_local.rs  issue_earch_open.rs  issue_search_closed.rs  issues_tracker.rs  issues_tracker_local.rs  lib.rs  main.rs  playground.rs  pull_request_overall_search.rs  pull_request_per_repo_search.rs  the_runner.rs
