[package]
name = "the_tracker"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[workspace]
exclude = ["playground"]

[dependencies]

tokio_wasi = { version = "1", features = ["macros"]}
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "431e90b5d0f3b9bffc7eb2cf82ba3119b37cb07c",features = [ "postgres", "runtime-tokio-rustls", "macros" ] }
anyhow = "1.0.80"
dotenv = "0.15.0"

serde_json = "1.0.97"
serde = { version = "1", features = ["derive"] }
flowsnet-platform-sdk = "0.1.3"
log = "0.4.14"
schedule-flows = "0.3.0"
chrono = "0.4.31"
github-flows = "0.7.0"
octocrab_wasi = { version = "0.19.1", features = ["wasi"], default-features = false }
base64 = "0.21.5"
derivative = "2.2.0"
openai-flows = "0.9.1"
web-scraper-flows = "0.1.0"
regex = "1.10.3"
itertools = "0.12.1"
store-flows = "0.3.1"
http_req_wasi = { version = "0.11.1", features = ["wasmedge_rustls"] }
urlencoding = "2.1.3"
slack-flows = "0.3.4"

# Adding sqlx v0.7.3 to dependencies
# Features:
# + _rt-tokio
# + any
# + bigdecimal
# + json
# + macros
# + migrate
# + postgres
# + runtime-tokio
# + runtime-tokio-native-tls
# + sqlx-macros
# + sqlx-postgres
# + tls-native-tls
# 21 deactivated features

# compile_error!("Only features sync,macros,io-util,rt,time are supported on wasm.");