[package]
name = "db_updater"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
tokio_wasi = { version = "1", features = ["macros"]}
sqlx = { git = "https://github.com/launchbadge/sqlx.git", rev = "431e90b5d0f3b9bffc7eb2cf82ba3119b37cb07c",features = [ "mysql", "postgres", "runtime-tokio-rustls" ] }
anyhow = "1.0.80"
