[package]
name = "db_updater_local"
version = "0.1.0"
edition = "2021"

[workspace]

 
[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { version="0.7.3", features = ["postgres", "runtime-tokio-native-tls", "bigdecimal"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
dotenvy = "0.15.0"
dotenv = "0.15.0"
